syntax = "proto3";

package rpc.product;
option go_package = "github.com/khanhduyy/shopms-product/rpc/product";

import "google/api/annotations.proto";

service ProductAPI {
    rpc GetAllProduct(GetProductsRequest) returns (GetProductsResponse) {
        option (google.api.http) = {
            get: "/api/products"
        };
    };

    rpc CreateProducts(CreateProductRequest) returns (CreateProductResponse) {
        option (google.api.http) = {
            post: "/api/products"
        };
    };
}

message Product {
    int64 id = 1;
    string name = 2;
    string description = 3;
    int64 quantity = 4;
    float price = 5;
}

message GetProductsResponse {
    repeated Product products = 1;
}
message CreateProductRequest {
    repeated Product products = 1;
}

message CreateProductResponse {
    repeated int64 productIds = 1;
}

message GetProductsRequest{
    int64 limit = 1;
    int64 offset = 2;
}